3ds: config.ini

--- a/config.ini
+++ b/config.ini
@@ -1,12 +1,12 @@
 [Setting]
-stage id = 016
+stage id = 130
 metal timer = 5
-barrier on board = True
-icons on board = ['1', '531', '677', '7', 'Wood', '231', '29', '32']
+barrier on board = False
+icons on board = ['206', '354', '94', '94-m', 'Air', 'Coin', '609']
 
 [Advance_Setting]
 path to shufflemove = ../../Shuffle-Move/
-box to crop = (18, 385, 576, 943)
-blocksize = 93
-path to mask = images/block_mask93.png
+box to crop = (46, 6, 274, 234)
+blocksize = 38
+path to mask = images/block_mask.png
 
